@@ -3,6 +3,7 @@
 
 use Symfony\Component\Console\Application;
 use Zenstruck\Changelog\Command\ConfigureCommand;
+use Zenstruck\Changelog\Command\DashboardCommand;
 use Zenstruck\Changelog\Command\GenerateCommand;
 use Zenstruck\Changelog\Command\ReleaseCommand;
 use Zenstruck\Changelog\Command\SelfUpdateCommand;
@@ -22,7 +23,8 @@ $application = new Application('zenstruck/changelog', '@dev');
 $application->addCommands([
     $default = new GenerateCommand(),
     new ReleaseCommand(),
-    new ConfigureCommand()
+    new ConfigureCommand(),
+    new DashboardCommand(),
 ]);
 
 if (\Phar::running()) {
